# Zver

./: .gitignore  BROWSER_IMPLEMENTATION_SUMMARY.md  BROWSER_QUICKSTART.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE1_FIXES.md  PHASE2_DOM_OPTIMIZATION.md  PHASE2_SUMMARY.md  PHASE3_DAY1_SUMMARY.md  PHASE3_DAY1_UNIT_TESTS.md  PHASE3_STABILIZATION.md  QUICKSTART.md  README.md  plan.md  test_fontface.rs  test_phase1.html  test_phase3.html  test_phase4.html  test_selector_simple.rs  test_taffy.rs
.cursor/plans/: full-css-support-2a8cf6f3.plan.md  phase1-completion-summary.md
.github/: copilot-instructions.md
crates/zver/: Cargo.toml
crates/zver-egui/: Cargo.toml  build.rs
crates/zver-egui/src/: egui_integration.rs  main.rs  phosphor_icons.rs
crates/zver-egui/src/browser/: address_bar.rs  devtools.rs  mod.rs  render_view.rs  tab.rs
crates/zver/src/: css.rs  dom.rs  js.rs  layout.rs  lib.rs  network.rs  render.rs  resource_loader.rs
crates/zver/src/css/: animations.rs  color.rs  fonts.rs  media_queries.rs  mod.rs  parser.rs  properties.rs  selectors.rs  serializer.rs
crates/zver/src/dom/: document.rs  manipulation.rs  node.rs  parser.rs  pseudo.rs  selectors.rs  serialization.rs
crates/zver/src/js/: console.rs  document.rs  element.rs  engine.rs  events.rs  timers.rs
crates/zver/src/layout/: builder.rs  compute.rs  engine.rs  metrics.rs  render.rs  styles.rs  taffy_integration.rs  types.rs
crates/zver/src/render/: initialization.rs  operations.rs  types.rs  utils.rs
crates/zver/tests/: css_phase2_tests.rs  css_phase3_tests.rs  css_phase4_tests.rs  css_phase5_tests.rs  dom_unit_tests.rs  fontface_test.rs  integration_tests.rs  js_unit_tests.rs  layout_integration.rs.bak  layout_unit_tests.rs  network_unit_tests.rs
docs/: API.md  ARCHITECTURE.md  BROWSER_ARCHITECTURE.md  BUILD.md  EXAMPLES.md  FAQ.md  ROADMAP.md
examples/: basic_usage.rs  index.html  layout_inspection.rs  test_css_phases.rs
src/: css.rs  dom.rs  js.rs  layout.rs  render.rs
tests/: README.md  TEST_INDEX.md  index.html  phase2_font_face.html  phase2_keyframes.html  phase2_media_queries.html  phase3_pseudo_classes.html  phase3_pseudo_elements.html  phase4_grid_properties.html  phase4_properties_units.html  phase5_cascade_inheritance.html  phase6_grid_layout.html  phase7_animations_transitions.html  test.html  test_formatting.html  test_phase1.html  test_phase2.html  test_taffy.rs
