[workspace]
members = [
    "crates/zver",
    "crates/zver-egui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
cssparser = "0.35"
html5ever = "0.27"
kuchikiki = "0.8"
selectors = "0.32"
tokio = { version = "1.39", features = ["full"] }
wgpu = "27.0"
winit = "0.30"

