[workspace]
members = [
    "crates/zver",
    "crates/zver-egui",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 2