[package]
name = "zver-egui"
edition = "2024"
version = "0.6.0"

[dependencies]
eframe = "0.33"
egui = "0.33"
zver = { path = "../zver" }
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros"] }
egui-phosphor = { version = "0.10.0", default-features = false, features = ["regular"] }
