[package]
name = "zver-egui"
edition = "2024"
version = "0.7.0-alpha.1"

[dependencies]
eframe = "0.33"
egui = "0.33"
zver = { path = "../zver" }
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros"] }
egui-phosphor = { version = "0.10.0", default-features = false, features = ["regular"] }
winreg = "0.55.0"

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "zver-egui"
path = "src/main.rs"

[package.metadata.windows]
subsystem = "windows"

