[package]
name = "zver"
edition = "2024"
version = "0.1.0"

[dependencies]
cssparser = "0.35"
html5ever = "0.35"
kuchikiki = "0.8"
selectors = "0.32"
tokio = { version = "1.48", features = ["full"] }
wgpu = "27.0"
winit = "0.30"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
scraper = "0.24"
taffy = "0.9"
boa_engine = "0.21"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
rayon = "1.11"
futures-util = "0.3"
wgpu_text = "27.0"
cosmic-text = "0.14"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
bytemuck = { version = "1.24", features = ["derive"] }


