[package]
name = "zver"
edition = "2024"
version = "0.1.0"

[dependencies]
cssparser = "0.35"
kuchikiki = "0.8"
selectors = "0.32"
precomputed-hash = "0.1"
tokio = { version = "1.48", features = ["full"] }
wgpu = "27.0"
winit = "0.30"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
scraper = "0.24"
taffy = "0.9"
boa_engine = "0.21"
thiserror = "2.0"
rayon = "1.11"
futures-util = "0.3"
wgpu_text = "27.0"
bytemuck = { version = "1.24", features = ["derive"] }

[[example]]
name = "basic_usage"
path = "../../examples/basic_usage.rs"

[[example]]
name = "layout_inspection"
path = "../../examples/layout_inspection.rs"


