[package]
name = "zver"
edition = "2024"
version = "0.1.0"

[dependencies]
# CSS and selector parsing (Phase 1: verified latest versions)
cssparser = { version = "0.35", features = ["serde"] }
selectors = "0.31"

# DOM parsing
scraper = "0.24"
ego-tree = "0.10"
html5ever = "0.29"
precomputed-hash = "0.1"

# Layout engine with full Flexbox and Grid support (Phase 1: updated to crates.io)
taffy = { version = "0.9.1", features = ["grid", "flexbox", "block_layout"] }

# Font rendering (Phase 1: added for @font-face support)
fontdue = "0.9.3"

# Bitflags for element state (Phase 1: verified latest version)
bitflags = "2.10"

# Async runtime and networking
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"

# JavaScript engine
boa_engine = "0.21"

# GPU rendering
wgpu = "27.0"
winit = "0.30"
wgpu_text = "27.0"
bytemuck = { version = "1.24", features = ["derive"] }

# Utilities
thiserror = "2.0"
rayon = "1.11"

# Performance monitoring (Phase 2: added for profiling)
tracing = "0.1"

[[example]]
name = "basic_usage"
path = "../../examples/basic_usage.rs"

[[example]]
name = "layout_inspection"
path = "../../examples/layout_inspection.rs"


